@@ -11,7 +11,7 @@ f(X)=    [ y0     ]
 3 : [ -1.68  ]
 4 : [  4.6   ]
 5 : [  7.91  ]
-covariance parameter=[0.01]
+covariance parameter=[0.01,4.51]
 X=0 : [ -4.62 -6    ]
 1 : [  4.1   5.33 ]
 2 : [  0    -0.5  ]
@@ -29,7 +29,7 @@ f(X)=    [ y0     ]
 5 : [ -11.3  ]
 6 : [  -6.17 ]
 7 : [ -12.3  ]
-covariance parameter=[0.01,5.02]
+covariance parameter=[0.01,5.02,8.6]
 df(X0)=[[ -4 ]
  [ -1 ]]
 d^f(X0) & d^f(X0) FD similar ?
